# rover_simulation

./: .gitignore  README.md
autonomous_ws/: run_basic.sh
autonomous_ws/devel/: .rosinstall  setup.sh
autonomous_ws/gazebo/plugins/basic_nav/: CMakeLists.txt  basic.cc
autonomous_ws/husky_simulator/: CMakeLists.txt  package.xml
autonomous_ws/src/husky_simulator/: CMakeLists.txt  package.xml
autonomous_ws/src/husky_simulator/gazebo/worlds/: saved.world
autonomous_ws/src/husky_simulator/include/husky_simulator/: husky_sim_plugin.hh
autonomous_ws/src/husky_simulator/launch/: saved.world  test.launch
autonomous_ws/src/husky_simulator/src/: husky_sim_plugin.cc
autonomous_ws/src/msi_2k16_17_urdf/urdf/: msi.xacro
autonomous_ws/src/rover_control/: CMakeLists.txt  out  package.xml
autonomous_ws/src/rover_gazebo/: CMakeLists.txt  package.xml
autonomous_ws/src/rover_gazebo/include/: rover_sim_plugin.hh
autonomous_ws/src/rover_gazebo/launch/: spawn_rover.launch
autonomous_ws/src/rover_gazebo/src/: rover_sim_plugin.cc
autonomous_ws/src/video_stuff/src/: stream.py
autonomous_ws_old/: kill.sh  run_basic.sh
autonomous_ws_old/devel/: .catkin  .rosinstall  setup.sh
autonomous_ws_old/devel/lib/husky_simulator/: husky_sim_test
autonomous_ws_old/devel/lib/pkgconfig/: husky_simulator.pc  video_stuff.pc
autonomous_ws_old/devel/share/husky_simulator/cmake/: husky_simulatorConfig.cmake
autonomous_ws_old/devel/share/video_stuff/cmake/: video_stuffConfig.cmake
autonomous_ws_old/src/husky_simulator/: CMakeLists.txt
autonomous_ws_old/src/husky_simulator/gazebo/worlds/: saved.world  saved_block.world
autonomous_ws_old/src/husky_simulator/include/husky_simulator/: husky_sim_plugin.hh
autonomous_ws_old/src/husky_simulator/src/: husky_sim_plugin.cc  husky_sim_test.cpp
husky_test/: out
husky_test/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
husky_test/devel/include/husky_msgs/: HuskyStatus.h
husky_test/devel/lib/pkgconfig/: husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_ur5_moveit_config.pc
rover_test/devel/: .catkin  .rosinstall  setup.sh
rover_test/devel/include/husky_msgs/: HuskyStatus.h
rover_test/devel/lib/pkgconfig/: husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_ur5_moveit_config.pc
rover_test/src/husky_gazebo/launch/: husky_playpen.launch  spawn_husky.launch
ws/: run_basic.sh
ws/gazebo/models/husky/: husky-1_3.sdf  model-1_4.sdf  model.sdf
ws/gazebo/models/ninja/: husky-1_3.sdf  model-1_4.sdf  model.config  model.sdf
ws/gazebo/worlds/: new_world
(+15 files in other folders)
